--- a/ПК-shaker/constructor/index.html
+++ b/ПК-shaker/constructor/index.html
@@ -62,9 +62,12 @@
 							</div>
 							<div class="adds">
 	
-								<a class="add add2 active" data-target="c_caps"><span>+</span></a><a class="add add1"
-									data-target="c_loop"><span>+</span></a><a class="add add4"
-									data-target="c_bottleneck"><span>+</span></a><a class="add add3"
+								<a class="add add2 active" data-target="c_caps"><span>+</span></a>
+								<a class="add add1"
+									data-target="c_loop"><span>+</span></a>
+								<a class="add add4"
+									data-target="c_bottleneck"><span>+</span></a>
+								<a class="add add3"
 									data-target="c_bottle"><span>+</span></a>
 							</div>
 						</div>
